--- a/package.json
+++ b/package.json
@@ -39,5 +39,7 @@
     "cross-env": "^5.0.0",
     "uglify-js": "^3.0.15",
     "vueify": "^8.7.0"
-  }
+  },
+  "_from": "vue-video-player@4.0.6",
+  "_resolved": "http://registry.npm.taobao.org/vue-video-player/download/vue-video-player-4.0.6.tgz"
 }
